@@ -537,6 +537,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/mediawidget.cpp: simplify expression.
     - src/mediawidget.cpp: add deprecation warning for ARTS.
     - src/mediawidget.cpp: add deprecation warning for ESounD.
+    - macbuild.sh: make compatible with new llvm-based otool binary, which now
+      uses proper return values. Be backwards-compatible with otool-classic.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
